Imagem adicionada e estilizada, barras laterais adicionadas

--- a/index.html
+++ b/index.html
@@ -15,13 +15,47 @@
     </header>
 
     <main>
+        <aside>
+            <p>Candidato A</p>
+            <ul>
+                Estados:
+                <li>Muito forte: 7</li>
+                <li>Forte: 6</li>
+                <li>Fraco> 7</li>
+            </ul>
+            <p>Candidato B</p>
+            <ul>
+                Estados:
+                <li>Muito forte: 7</li>
+                <li>Forte: 6</li>
+                <li>Fraco> 7</li>
+            </ul>
+        </aside>
+        
         <div class="mapa">
-            <img src="/images/Brazil_Political_Map.svg" usemap="#image-map">
-
+            <img src="/images/Brazil_Political_Map_Final3.png" alt="Mapa politico do Brasil" usemap="#image-map">
+                
             <map name="image-map">
-                <area target="" alt="" title="" href="" coords="" shape="rect">
+                <area target="" alt="" title="" href="" coords="211,400,196,392,190,382,203,371,221,356,236,355,255,362,264,367,264,377,261,388,249,403,237,411,230,420,227,404,219,402" shape="poly">
             </map>
         </div>
+
+        <aside>
+            <p>Candidato A</p>
+            <ul>
+                Estados:
+                <li>Muito forte: 7</li>
+                <li>Forte: 6</li>
+                <li>Fraco> 7</li>
+            </ul>
+            <p>Candidato B</p>
+            <ul>
+                Estados:
+                <li>Muito forte: 7</li>
+                <li>Forte: 6</li>
+                <li>Fraco> 7</li>
+            </ul>
+        </aside>
     </main>
 </body>
 </html>
