Adiçao do html  das novas barras laterais

--- a/index.html
+++ b/index.html
@@ -15,21 +15,42 @@
     </header>
 
     <main>
-        <aside>
-            <p>Candidato A</p>
-            <ul>
-                Estados:
-                <li>Muito forte: 7</li>
-                <li>Forte: 6</li>
-                <li>Fraco> 7</li>
-            </ul>
-            <p>Candidato B</p>
-            <ul>
-                Estados:
-                <li>Muito forte: 7</li>
-                <li>Forte: 6</li>
-                <li>Fraco> 7</li>
-            </ul>
+        <aside class="menu">
+            <div>
+                <form action="">
+                    <p>Turno</p>
+
+                    <label for="1">
+                        <input type="radio" name="turno" id="1">
+
+                        1°
+                    </label>
+
+                    <label for="2">
+                        <input type="radio" name="turno" id="2">
+
+                        2°
+                    </label>
+                </form>
+            </div>
+
+            <div>
+                <form action="">
+                    <p>Eleição</p>
+
+                    <label for="2022">
+                        <input type="radio" name="ano" id="2022">
+
+                        2022
+                    </label>
+
+                    <label for="2018">
+                        <input type="radio" name="ano" id="2018">
+
+                        2018
+                    </label>
+                </form>
+            </div>
         </aside>
         
         <div class="mapa">
@@ -40,21 +61,36 @@
             </map>
         </div>
 
-        <aside>
-            <p>Candidato A</p>
-            <ul>
-                Estados:
-                <li>Muito forte: 7</li>
-                <li>Forte: 6</li>
-                <li>Fraco> 7</li>
-            </ul>
-            <p>Candidato B</p>
-            <ul>
-                Estados:
-                <li>Muito forte: 7</li>
-                <li>Forte: 6</li>
-                <li>Fraco> 7</li>
-            </ul>
+        <aside class="barra-resultado">
+            <p>Candidato</p>
+
+            <div>
+                <div>
+                    <img src="images/Bolsonaro.jpg" alt="">
+                </div>
+
+                <div>
+                    <h2>Candidato A</h2>
+
+                    <p>PO</p>
+
+                    <div>-------</div>
+                </div>
+
+                <div>
+                    <span>
+                        49%
+                    </span>
+
+                    <strong>
+                        56.000.000
+                    </strong>
+
+                    <p>
+                        votos
+                    </p>
+                </div>
+            </div>
         </aside>
     </main>
 </body>
