Barras laterais estilizadas

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
 
     <main>
-        <aside class="menu">
-            <div>
+        <aside class="menu-lateral">
+            <div class="turno">
                 <form action="">
                     <p>Turno</p>
 
@@ -31,10 +31,12 @@
 
                         2°
                     </label>
+
+                    <div></div>
                 </form>
             </div>
 
-            <div>
+            <div class="ano-eleicao">
                 <form action="">
                     <p>Eleição</p>
 
@@ -64,27 +66,51 @@
         <aside class="barra-resultado">
             <p>Candidato</p>
 
-            <div>
+            <div class="candidato">
                 <div>
                     <img src="images/Bolsonaro.jpg" alt="">
                 </div>
 
-                <div>
+                <div class="nome-partido">
                     <h2>Candidato A</h2>
 
                     <p>PO</p>
 
-                    <div>-------</div>
+                    <div class="porcentagem"></div>
                 </div>
 
                 <div>
-                    <span>
-                        49%
-                    </span>
-
                     <strong>
-                        56.000.000
+                        49%
                     </strong>
+
+                    <span>56.000.000</span>
+
+                    <p>
+                        votos
+                    </p>
+                </div>
+            </div>
+
+            <div class="candidato">
+                <div>
+                    <img src="images/Bolsonaro.jpg" alt="">
+                </div>
+
+                <div class="nome-partido">
+                    <h2>Candidato A</h2>
+
+                    <p>PO</p>
+
+                    <div class="porcentagem"></div>
+                </div>
+
+                <div>
+                    <strong>
+                        49%
+                    </strong>
+
+                    <span>56.000.000</span>
 
                     <p>
                         votos
