Script para mostrar o resultdado quando passa o mouse em cima do mapa adicionado. E dados novos adicionados

--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
         <div class="mapa">
             <img src="/images/Brazil_Political_Map_Final3.png" alt="Mapa politico do Brasil" usemap="#image-map">
                 
-            <map name="image-map">
-                <area onmouseover="Tip('Rio Grande do Sul')" onmouseout="UnTip()" target="" alt="" title="" href="" coords="211,400,196,392,190,382,203,371,221,356,236,355,255,362,264,367,264,377,261,388,249,403,237,411,230,420,227,404,219,402" shape="poly">
+            <map class="resultadoEstado" name="image-map">
             </map>
+
+            </div>
         </div>
 
         <aside class="barra-resultado">
